--- a/nuvem-palavras/src/app/tela-pergunta/tela-pergunta.component.html
+++ b/nuvem-palavras/src/app/tela-pergunta/tela-pergunta.component.html
@@ -15,7 +15,7 @@
         <img class="elementos-LIDERA" src="img/elementos-LIDERA-2024-v2-13.png" />
         <div class="overlap-group-2">
         <div class="ellipse"></div>
-        <img class="branco" src="img/branco-1.png" />
+        <img class="branco" src="../../assets/digital.png" />
         </div>
     </div>
 </div>
