--- a/nuvem-palavras/src/app/tela-palavras/tela-palavras.component.css
+++ b/nuvem-palavras/src/app/tela-palavras/tela-palavras.component.css
@@ -14,6 +14,15 @@
     position: relative;
   }
   
+  .painel-horizontal .mensagem-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap; 
+    justify-content: space-evenly; 
+    align-items: center;
+    align-content: flex-end;
+  }
+
   .painel-horizontal .mensagem {
     padding: 10px;
     border-bottom: 1px solid #ccc;
@@ -22,7 +31,7 @@
     color: #ffffff;
     font-size: 50px;
   }
-
+  
   .painel-horizontal .mensagem.small {
     padding: 10px;
     border-bottom: 1px solid #ccc;
@@ -38,5 +47,5 @@
     font-family: "IBM Plex Sans-Bold", Helvetica;
     font-weight: 700;
     color: #ffffff;
-    font-size: 80px;
+    font-size: 60px;
   }
