finalizando a tela de palavras

--- a/nuvem-palavras/src/app/tela-palavras/tela-palavras.component.css
+++ b/nuvem-palavras/src/app/tela-palavras/tela-palavras.component.css
@@ -22,16 +22,8 @@
     align-items: center;
     align-content: center;
   }
-
-  .painel-horizontal .mensagem.medium {
-    padding: 10px;
-    font-family: "IBM Plex Sans-Bold", Helvetica;
-    font-weight: 700;
-    color: #ffffff;
-    font-size: 35px;
-  }
   
-  .painel-horizontal .mensagem.small {
+  .painel-horizontal .mensagem-verysmall {
     padding: 10px;
     font-family: "IBM Plex Sans-Bold", Helvetica;
     font-weight: 700;
@@ -39,10 +31,34 @@
     font-size: 50px;
   }
   
-  .painel-horizontal .mensagem.large {
+  .painel-horizontal .mensagem-small {
+    padding: 10px;
+    font-family: "IBM Plex Sans-Bold", Helvetica;
+    font-weight: 700;
+    color: #ffffff;
+    font-size: 40px;
+  }
+
+  .painel-horizontal .mensagem-medium {
+    padding: 10px;
+    font-family: "IBM Plex Sans-Bold", Helvetica;
+    font-weight: 700;
+    color: #ffffff;
+    font-size: 30px;
+  }  
+  
+  .painel-horizontal .mensagem-large {
     padding: 10px;
     font-family: "IBM Plex Sans-Bold", Helvetica;
     font-weight: 700;
     color: #ffffff;
     font-size: 20px;
+  }
+  
+  .painel-horizontal .mensagem-verylarge {
+    padding: 10px;
+    font-family: "IBM Plex Sans-Bold", Helvetica;
+    font-weight: 700;
+    color: #ffffff;
+    font-size: 10px;
   }
