--- a/nuvem-palavras/src/app/tela-pergunta/tela-pergunta.component.html
+++ b/nuvem-palavras/src/app/tela-pergunta/tela-pergunta.component.html
@@ -12,7 +12,7 @@
         <div class="frame" (click)="enviar()">
             <div class="text-wrapper-3">Enviar</div>
         </div>
-        <img class="elementos-LIDERA" src="img/elementos-LIDERA-2024-v2-13.png" />
+        <img class="elementos-LIDERA" src="../../assets/logo.png" />
         <div class="overlap-group-2">
         <div class="ellipse"></div>
         <img class="branco" src="../../assets/digital.png" />
