finalizando o css das palavras

--- a/nuvem-palavras/src/app/tela-palavras/tela-palavras.component.css
+++ b/nuvem-palavras/src/app/tela-palavras/tela-palavras.component.css
@@ -22,6 +22,11 @@
     align-items: center;
     align-content: center;
   }
+
+  @keyframes fadeInAnimation {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
   
   .painel-horizontal .mensagem-verysmall {
     padding: 10px;
@@ -29,6 +34,9 @@
     font-weight: 700;
     color: #ffffff;
     font-size: 50px;
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
   }
   
   .painel-horizontal .mensagem-small {
@@ -37,6 +45,9 @@
     font-weight: 700;
     color: #ffffff;
     font-size: 40px;
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
   }
 
   .painel-horizontal .mensagem-medium {
@@ -45,6 +56,9 @@
     font-weight: 700;
     color: #ffffff;
     font-size: 30px;
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
   }  
   
   .painel-horizontal .mensagem-large {
@@ -53,6 +67,9 @@
     font-weight: 700;
     color: #ffffff;
     font-size: 20px;
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
   }
   
   .painel-horizontal .mensagem-verylarge {
@@ -61,4 +78,7 @@
     font-weight: 700;
     color: #ffffff;
     font-size: 10px;
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
   }
