--- a/nuvem-palavras/src/app/tela-palavras/tela-palavras.component.html
+++ b/nuvem-palavras/src/app/tela-palavras/tela-palavras.component.html
@@ -1,7 +1,7 @@
 <div class="painel-horizontal">
     <div class="div">
         <div class="mensagem-container">
-            <div *ngFor="let mensagem of mensagens" [ngClass]="getTamanhoClasse(mensagem)" [@textAnimation]="animationState">
+            <div *ngFor="let mensagem of mensagens" [ngClass]="getTamanhoClasse(mensagem)">
               {{ mensagem }}
             </div>
         </div>
