--- a/nuvem-palavras/src/app/tela-palavras/tela-palavras.component.css
+++ b/nuvem-palavras/src/app/tela-palavras/tela-palavras.component.css
@@ -33,7 +33,8 @@
     font-family: "IBM Plex Sans-Bold", Helvetica;
     font-weight: 700;
     color: #ffffff;
-    font-size: 50px;
+    font-size: 60px;
+    transition: all 0.5s ease;
     animation: fadeInAnimation ease 2s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
@@ -44,7 +45,8 @@
     font-family: "IBM Plex Sans-Bold", Helvetica;
     font-weight: 700;
     color: #ffffff;
-    font-size: 40px;
+    font-size: 50px;
+    transition: all 0.5s ease;
     animation: fadeInAnimation ease 2s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
@@ -55,7 +57,8 @@
     font-family: "IBM Plex Sans-Bold", Helvetica;
     font-weight: 700;
     color: #ffffff;
-    font-size: 30px;
+    font-size: 40px;
+    transition: all 0.5s ease;
     animation: fadeInAnimation ease 2s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
@@ -66,7 +69,8 @@
     font-family: "IBM Plex Sans-Bold", Helvetica;
     font-weight: 700;
     color: #ffffff;
-    font-size: 20px;
+    font-size: 30px;
+    transition: all 0.5s ease;
     animation: fadeInAnimation ease 2s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
@@ -77,7 +81,8 @@
     font-family: "IBM Plex Sans-Bold", Helvetica;
     font-weight: 700;
     color: #ffffff;
-    font-size: 10px;
+    font-size: 20px;
+    transition: all 0.5s ease-in-out;
     animation: fadeInAnimation ease 2s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
