--- a/nuvem-palavras/src/app/tela-pergunta/tela-pergunta.component.css
+++ b/nuvem-palavras/src/app/tela-pergunta/tela-pergunta.component.css
@@ -9,62 +9,68 @@
   .tablet-horizontal .div {
     background-color: #011e38;
     overflow: hidden;
-    width: 1440px;
-    height: 960px;
+    width: 2560px;
+    height: 1600px;
     position: relative;
   }
   
   .tablet-horizontal .overlap {
     position: absolute;
-    width: 1050px;
-    height: 228px;
-    top: 127px;
-    left: 220px;
+    width: 1786px;
+    height: 387px;
+    top: 278px;
+    left: 335px;
   }
   
   .tablet-horizontal .text-wrapper {
-    font-family: "IBM Plex Sans-Bold", Helvetica;
+    margin-top: 0;
+    font-family: "IBM Plex Sans", Helvetica;
     font-weight: 700;
     color: #ffffff;
-    font-size: 85px;
-    margin-top: 0;
+    font-size: 150px;
+    letter-spacing: 0;
+    line-height: normal;
   }
   
   .tablet-horizontal .rectangle {
     position: absolute;
-    width: 682px;
-    height: 7px;
-    top: 221px;
+    width: 1250px;
+    height: 12px;
+    top: 375px;
     left: 0;
     background-color: #2750e9;
   }
   
   .tablet-horizontal .overlap-group {
     position: absolute;
-    top: 409px;
-    left: 220px;
+    top: 757px;
+    left: 335px;
   }
   
   .tablet-horizontal .text-wrapper-2 {
-    font-family: "IBM Plex Sans-Italic", Helvetica;
+    font-family: "IBM Plex Sans", Helvetica;
     font-weight: 400;
     font-style: italic;
     color: #7e7070;
+    letter-spacing: 0;
+    line-height: normal;
     background-color: #f5f1eb;
     border-radius: 10px;
-    font-size: 22px;
-    padding: 10px;
+    font-size: 40px;
+    padding: 15px;
+    width: 1750px;
   }
   
   .tablet-horizontal .frame {
-    display: inline-flex;
+    display: flex;
+    width: 326px;
     align-items: center;
     justify-content: center;
     gap: 10px;
     padding: 16px 60px;
     position: absolute;
-    top: 679px;
-    left: 1013px;
+    top: 1211px;
+    left: 1670px;
     background-color: #264fec;
     border-radius: 10px;
     cursor: pointer;
@@ -74,46 +80,46 @@
     position: relative;
     width: fit-content;
     margin-top: -1px;
-    font-family: "IBM Plex Sans-Medium", Helvetica;
+    font-family: "IBM Plex Sans", Helvetica;
     font-weight: 500;
     color: #ffffff;
-    font-size: 30px;
+    font-size: 60px;
     letter-spacing: 0;
     line-height: normal;
   }
   
   .tablet-horizontal .elementos-LIDERA {
     position: absolute;
-    width: 240px;
-    height: 246px;
-    top: 679px;
-    left: 61px;
+    width: 323px;
+    height: 331px;
+    top: 1182px;
+    left: 69px;
     object-fit: cover;
   }
   
   .tablet-horizontal .overlap-group-2 {
     position: absolute;
-    width: 217px;
-    height: 277px;
+    width: 374px;
+    height: 477px;
     top: -80px;
-    left: 1287px;
+    left: 2314px;
   }
   
   .tablet-horizontal .ellipse {
     position: absolute;
-    width: 217px;
-    height: 217px;
+    width: 374px;
+    height: 374px;
     top: 0;
     left: 0;
     background-color: #264fec;
-    border-radius: 108.5px;
+    border-radius: 187px;
   }
   
   .tablet-horizontal .branco {
     position: absolute;
-    width: 137px;
-    height: 187px;
-    top: 90px;
-    left: 16px;
+    width: 218px;
+    height: 322px;
+    top: 155px;
+    left: 28px;
     object-fit: cover;
   }
