--- a/nuvem-palavras/src/app/tela-pergunta/tela-pergunta.component.css
+++ b/nuvem-palavras/src/app/tela-pergunta/tela-pergunta.component.css
@@ -6,6 +6,17 @@
     width: 100%;
   }
   
+  .tablet-horizontal .botao-fullscreen {
+    background-color: #011e38;
+    width: 80px;
+    height: 80px;
+    margin: 10px 0 0 10px;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 24px;
+  }
+
   .tablet-horizontal .div {
     background-color: #011e38;
     overflow: hidden;
