--- a/nuvem-palavras/src/app/tela-pergunta/tela-pergunta.component.html
+++ b/nuvem-palavras/src/app/tela-pergunta/tela-pergunta.component.html
@@ -1,4 +1,5 @@
 <div class="tablet-horizontal">
+    <button class="botao-fullscreen" (click)="toggleFullScreen()"><i class="fas fa-expand"></i></button>
     <div class="div">
         <div class="overlap">
             <p class="text-wrapper">Qual o seu maior desafio no GB para 2024?</p>
